ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-website-ingress
  namespace: argocd
  labels:
    app: django-website
  annotations:
    # Ingress Core Settings
    # kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/subnets: subnet-88bfcaf3, subnet-a1bc9fed, subnet-4eaa5725
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-website-service
                port:
                  number: 80
status:
  loadBalancer: {}
